[package]
name = "relay-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
activitypub_federation = "0.5.8"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = { version = "0.4.38", features = ["serde"] }
dataurl = "0.1.2"
dotenvy = "0.15.7"
enum_delegate = "0.2.0"
getopts = "0.2.21"
jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust"] }
serde = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono" ] }
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["macros"] }
url = "2.5.2"
